base section mobile view fix

--- a/src/app/features/base/base-item/base-item.component.scss
+++ b/src/app/features/base/base-item/base-item.component.scss
@@ -78,7 +78,8 @@ select {
   padding-top: 6px;
 }
 
-.input-group-title, .prefix-data {
+.input-group-title,
+.prefix-data {
   min-width: 83px;
 }
 
@@ -111,12 +112,22 @@ button[mat-dialog-close] {
 }
 
 .lookup-column {
-   ::ng-deep .mat-form-field-wrapper {
+  ::ng-deep .mat-form-field-wrapper {
     padding-bottom: 0em;
   }
   mat-form-field {
     display: block;
     padding: 0;
     margin: 0;
+  }
+}
+
+.data-form {
+  mat-form-field {
+    ::ng-deep .mat-form-field-wrapper {
+      @include breakpoint(mobileonly) {
+        padding-bottom: 0em !important;
+      }
+    }
   }
 }
