--- a/src/app/features/base/base-location/base-location.component.scss
+++ b/src/app/features/base/base-location/base-location.component.scss
@@ -1,8 +1,11 @@
-@import '../../../../assets/scss/variables.scss';
+@import "../../../../assets/scss/variables.scss";
 
 div.form-checkbox-input {
-   margin-bottom: 18px;
+  margin-bottom: 18px;
   height: 39px;
+  @include breakpoint(mobileonly) {
+    padding-bottom: 48px;
+  }
   mat-checkbox {
     margin-left: 10px;
     margin-right: 30px;
@@ -21,7 +24,7 @@ div.form-checkbox-input {
   mat-checkbox {
     margin-left: 10px;
   }
-  b{
+  b {
     @include breakpoint(mobileonly) {
       display: block;
     }
@@ -37,7 +40,7 @@ div.form-checkbox-input {
     padding: 0 20px;
     min-width: 71px;
   }
-  input{
+  input {
     @include breakpoint(mobileonly) {
       padding: 8px 40px;
     }
