--- a/src/assets/scss/mat-table.scss
+++ b/src/assets/scss/mat-table.scss
@@ -72,19 +72,11 @@ tr.mat-row {
   }
   .two-button-column {
     text-align: center;
-    width: 80px;
-    @include breakpoint(mobileonly) {
-      font-size: 10px;
-    }
+    width: 90px;
     button {
       transform: scale(0.75);
       &:hover {
         transform: scale(0.85);
-      }
-      @include breakpoint(mobileonly) {
-        transform: scale(0.6);
-        margin: 0;
-        padding: 0;
       }
     }
   }
